Thu Mar 20 11:37:28 2014  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Fixed a broken regular expression that was causing
	  CSV to miss escaping some special meaning characters when used
	  in parsing.
	  Reported by David Unric
	  [ruby-core:54986] [Bug #8405]

Thu Mar 20 16:53:07 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): should not invoke
	  garbage_collect_with_gvl() here on non-ruby threads.

	  Should just ignore the malloc_increase.

	  This issue is pointed by Eric Wong [ruby-core:61519].

Thu Mar 20 13:05:16 2014  Koichi Sasada  <ko1@atdot.net>

	* struct.c (rb_struct_alloc): use RARRAY_CONST_PTR() instead of
	  RARRAY_PTR().

Thu Mar 20 12:59:39 2014  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h (rb_obj_call_init, rb_class_new_instance):
	  constify a parameter (VALUE *).
	  I believe this incompatibility doesn't break any code.
	  However, if you have trouble, please tell us.

	* eval.c, object.c: ditto.

Thu Mar 20 12:31:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_method_entry_get_without_cache): get rid of
	  infinite recursion at aliases in a subclass and a superclass.
	  return actually defined class for other than singleton class.
	  [ruby-core:60431] [Bug #9475]

Wed Mar 19 17:13:06 2014  Eric Wong  <e@80x24.org>

	* time.c (time_mload): freeze and preserve marshal-loaded time zone
	* test/ruby/test_time.rb: add test for GC on loaded object
	  [Bug #9652]

Tue Mar 18 23:20:12 2014  Shota Fukumori  <her@sorah.jp>

	* vm_eval.c (eval_string_with_cref): Unify to use NIL_P.

Tue Mar 18 22:03:41 2014  Shota Fukumori  <her@sorah.jp>

	* vm_eval.c (eval_string_with_cref): Use file path even if scope is
	  given. Related to [ruby-core:56099] [Bug #8662] and r42103.

Mon Mar 17 13:17:47 2014  Koichi Sasada  <ko1@atdot.net>

	* enumerator.c (enumerator_block_call): use RARRAY_CONST_PTR()
	  instead of RARRAY_PTR().

	* io.c (rb_io_s_popen): ditto.
